# MusicX_backend

./: .gitignore  Cargo.toml  migrations.sql
docker/: docker-compose.yml
src/: app.rs  error.rs  main.rs  state.rs
src/config/: db.rs  keycloak.rs  minio.rs  mod.rs  oauth.rs
src/handlers/: audio.rs  auth_handler.rs  health.rs  mod.rs  users.rs
src/middleware/: auth.rs
src/models/: audio.rs  auth_model.rs  mod.rs  user.rs
src/services/: storage.rs
