[package]
name = "MusicX_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = "1"
aws-credential-types = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
dotenv = "0.15"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
